# pay-attention

./: .gitignore  README.md  Tensor Puzzlers.ipynb  Tensor Puzzlers_solved_3.ipynb  Tensor Puzzlers_solved_4.ipynb  justfile  main.py  pyproject.toml
data/plato/: apology.txt  meno.txt  phaedo.txt  symposium.txt
notebooks/: pa-01-basic-nn.ipynb
