[project]
name = "pay-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I"]